@@ -99,7 +99,8 @@ class Acl0001Test extends SeleniumJoomlaTestCase
         $this->assertTrue($this->isTextPresent("Item successfully saved."));
     } catch (PHPUnit_Framework_AssertionFailedError $e) {
         array_push($this->verificationErrors, $e->toString());
-    }   
+    }
+    $this->gotoAdmin();   
     $this->doAdminLogout();
 	sleep (1);   
  	echo("Log in to back end as  My Test User". $saltUser . ".\n");
@@ -145,17 +146,17 @@ class Acl0001Test extends SeleniumJoomlaTestCase
 	$this->doAdminLogin();
 	$this->deleteTestUsers('My Test User');
 	$this->gotoAdmin();
-    echo "Delete Article Administrator".$saltGroup." group.\n";	
+    echo "Delete Article Administrator group(s).\n";	
     $this->click("link=Groups");
     $this->waitForPageToLoad("30000");
-    $this->type("filter_search", "article administrator".$saltGroup);
+    $this->type("filter_search", "article administrator");
     $this->click("//button[@type='submit']");
     $this->waitForPageToLoad("30000");
     $this->click("toggle");
     $this->click("link=Delete");
     $this->waitForPageToLoad("30000");
     try {
-    	$this->assertTrue($this->isTextPresent("1 item(s) successfully deleted."));
+    	$this->assertTrue($this->isTextPresent("item(s) successfully deleted."));
     } catch (PHPUnit_Framework_AssertionFailedError $e) {
     	array_push($this->verificationErrors, $e->toString());
     }
