@@ -19,6 +19,7 @@ class Article0001 extends SeleniumJoomlaTestCase
 	{
 		$this->setUp();
 		echo "Starting testUnpublishArticle.\n";
+		$this->gotoAdmin();
 		$this->doAdminLogin();
 
 		echo "Go to front end and check that Designers and Developers is shown"."\n";
@@ -46,6 +47,7 @@ class Article0001 extends SeleniumJoomlaTestCase
 
 		$this->click("//img[@alt='Unpublished']");
 		$this->waitForPageToLoad("30000");
+		$this->gotoAdmin();
 		$this->doAdminLogout();
 	}
 
@@ -53,6 +55,7 @@ class Article0001 extends SeleniumJoomlaTestCase
 	{
 		$this->setUp();
 		echo "Starting testPublishArticle.\n";
+		$this->gotoAdmin();
 		$this->doAdminLogin();
 
 		echo "Go to back end and unpublish Designers and Developers"."\n";
@@ -80,7 +83,7 @@ class Article0001 extends SeleniumJoomlaTestCase
 		echo "Go to front end and check that Designers and Developers is shown"."\n";
 		$this->gotoSite();
 		$this->assertTrue($this->isTextPresent("Designers and Developers"));
-
+		$this->gotoAdmin();
 		$this->doAdminLogout();
 	}
 
