@@ -18,9 +18,11 @@ class ControlPanel0001 extends SeleniumJoomlaTestCase
 	function testMenuLinksPresent()
 	{
 		$this->setUp();
-		$this->doAdminLogin();
 		$this->gotoAdmin();
+		$this->doAdminLogin();
+		$this->gotoSite();
 		$this->doFrontEndLogin();
+		$this->gotoSite();		
 		$this->doFrontEndLogout();
 		$this->gotoAdmin();
 		echo "Check that top menu options are visible.\n";
